# template6alh

./: .gitignore  README.md  convert_img.py  environment.yml  fix_database.py  make_coords.py  pyproject.toml
docs/: README-template.md  docs-template.md  documentation-template.html  install.md  make_docs_md.xsh  make_html.xon  make_html.xsh  make_readme.xon  makefile  quickstart.md  t6alh-template.html
template6alh/: api.py  cli.py  execptions.py  flip_xform_map.py  iterative_shape_averaging.py  logger.py  matplotlib_slice.py  read_raw_data.py  scratch.py  segment_neuropil.py  sql_classes.py  sql_utils.py  template_creation.py  utils.py
template6alh/_tests/: manual_test.py  test_api.py  test_sql.py  test_utils.py
